--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/b/index.xhtml
@@ -7,7 +7,7 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
-			<script>var dialogSize = { width: 1050, height: 554 };</script>
+			<script>var dialogSize = { width: 1150, height: 654 };</script>
 			<com:scriptfile set="IGNITE" />
 			<com:stylefile path="kal001.b.main.css" />
 			<com:scriptfile path="kal001.b.start.js" />
@@ -16,8 +16,8 @@
 		</ui:define>
 		<ui:define name="content">
 			<div id="functions-area">
-				<button class="proceed" data-bind="click: printErrorByExcel ">#{i18n.getText('KAL001_8')}</button>
-				<button data-bind="click: printErrorByCsv">#{i18n.getText('KAL001_9')}</button>
+				<button class="proceed" data-bind="click: exportExcel ">#{i18n.getText('KAL001_8')}</button>
+				<button data-bind="click: sendEmail">#{i18n.getText('KAL001_9')}</button>
 				<button data-bind="click: closeDialog">#{i18n.getText('KAL001_10')}</button>
 				 
 			</div>
