--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kal/001/a/index.xhtml
@@ -26,7 +26,7 @@
 		<ui:define name="content">
 			<div id="functions-area">
 				<div class="container">
-					<button id="extract"  tabindex="1" >#{i18n.getText('KAL001_2')}</button>
+					<button id="extract" data-bind="click: open_Dialog" tabindex="1" >#{i18n.getText('KAL001_2')}</button>
 
 				</div>
 			</div>
