[KMF002] fix bug
- Select first row item
- Save wrong value in scrren F

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmf/002/a/index.xhtml
@@ -40,6 +40,10 @@
 			<com:scriptfile path="../e/kmf002.e.service.js" />
 			<com:scriptfile path="../e/kmf002.e.vm.js" />
 			
+			<com:stylefile path="../f/kmf002.f.main.css" />
+			<com:scriptfile path="../f/kmf002.f.service.js" />
+			<com:scriptfile path="../f/kmf002.f.vm.js" />
+			
 			<com:scriptfile path="../commonTableMonthDaySet.js" />
 			
 			<com:stylefile path="kmf002.a.main.css" />
