--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/b.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/b.xhtml
@@ -13,7 +13,7 @@
 			<tr>
 				<td class="color-header" id="b3">#{i18n.getText('KAF022_120')}</td>
 				<td>
-					<div tabindex="1" data-bind="ntsRadioBoxGroup: {
+					<div id="b18" tabindex="1" data-bind="ntsRadioBoxGroup: {
 						options: itemListB18,
 						optionsValue: 'code',
 						optionsText: 'name',
