--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/001/index.xhtml
@@ -31,7 +31,7 @@
 			<div id="contents-area">
 				<div id="side-menu" class="cf"></div>
 				<div id="content" class="cf">
-					<div id="ccgcomponent"></div>
+					<div id="com-ccg001"></div>
 					<h1>CCG001 社員範囲選択 （共通部品） Employee range selection</h1>
 					<div class="table" style="margin-left: 100px; margin-bottom:  30px;">
 					<br/>
@@ -162,7 +162,7 @@
 								<h2>HTML</h2>
 								<pre>
 <![CDATA[<ui:define name="htmlHead">
-	// must included in header
+	// Must included in header
 	<com:stylefile path="/view/ccg/share/style.css" of="/nts.uk.com.web" />
 	<com:scriptfile set="IGNITE" />
 	<com:scriptfile path="/view/kcp/share/list.js" of="/nts.uk.com.web" />
@@ -171,56 +171,55 @@
 	<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
 
 	// The component container
-	<div id="ccgcomponent"></div>
+	<div id="com-ccg001"></div>
 </ui:define>]]>
 </pre>
 <h2>TypeScript</h2>
 								<pre>
-<![CDATA[var self = this;
-// Component option
-self.ccgcomponent = {
-    /** Common properties */
-    systemType: self.systemType(), // システム区分
-    isSelectAllEmployee: self.isSelectAllEmployee(), // 検索タイプ
-    isQuickSearchTab: self.isQuickSearchTab(), // クイック検索
-    isAdvancedSearchTab: self.isAdvancedSearchTab(), // 詳細検索
-    showBaseDate: self.showBaseDate(), // 基準日利用
-    showClosure: self.showClosure(), // 就業締め日利用
-    showAllClosure: self.showAllClosure(), // 全締め表示
-    showPeriod: self.showPeriod(), // 対象期間利用
-    periodFormatYM: self.periodFormatYM(), // 対象期間精度
-
-    /** Required parameter */
-    baseDate: self.baseDate().toISOString(), // 基準日
-    periodStartDate: self.periodStartDate().toISOString(), // 対象期間開始日
-    periodEndDate: self.periodEndDate().toISOString(), // 対象期間終了日
-    inService: self.inService(), // 在職区分
-    leaveOfAbsence: self.leaveOfAbsence(), // 休職区分
-    closed: self.closed(), // 休業区分
-    retirement: self.retirement(), // 退職区分
-
-    /** Quick search tab options */
-    isAllReferableEmployee: self.isAllReferableEmployee(), // 参照可能な社員すべて
-    isOnlyMe: self.isOnlyMe(), // 自分だけ
-    isEmployeeOfWorkplace: self.isEmployeeOfWorkplace(), // 同じ職場の社員
-    isEmployeeWorkplaceFollow: self.isEmployeeWorkplaceFollow(), // 同じ職場とその配下の社員
-
-    /** Advanced search properties */
-    showEmployment: self.showEmployment(), // 雇用条件
-    showWorkplace: self.showWorkplace(), // 職場条件
-    showClassification: self.showClassification(), // 分類条件
-    showJobTitle: self.showJobTitle(), // 職位条件
-    showWorktype: self.showWorktype(), // 勤種条件
-    isMutipleCheck: self.isMutipleCheck(), // 選択モード
-
-    /** Return data */
-    returnDataFromCcg001: function(data: Ccg001ReturnedData) {
-        self.selectedEmployee(data.listEmployee);
-    }
-
+<![CDATA[// Set component option
+self.ccg001ComponentOption = {
+	/** Common properties */
+	systemType: self.systemType(), // システム区分
+	showEmployeeSelection: self.isSelectAllEmployee(), // 検索タイプ
+	showQuickSearchTab: self.isQuickSearchTab(), // クイック検索
+	showAdvancedSearchTab: self.isAdvancedSearchTab(), // 詳細検索
+	showBaseDate: self.showBaseDate(), // 基準日利用
+	showClosure: self.showClosure(), // 就業締め日利用
+	showAllClosure: self.showAllClosure(), // 全締め表示
+	showPeriod: self.showPeriod(), // 対象期間利用
+	periodFormatYM: self.periodFormatYM(), // 対象期間精度
+	
+	/** Required parameter */
+	baseDate: moment(self.baseDate()).format("YYYY-MM-DD"), // 基準日
+	periodStartDate: periodStartDate, // 対象期間開始日
+	periodEndDate: periodEndDate, // 対象期間終了日
+	inService: self.inService(), // 在職区分
+	leaveOfAbsence: self.leaveOfAbsence(), // 休職区分
+	closed: self.closed(), // 休業区分
+	retirement: self.retirement(), // 退職区分
+	
+	/** Quick search tab options */
+	showAllReferableEmployee: self.isAllReferableEmployee(), // 参照可能な社員すべて
+	showOnlyMe: self.isOnlyMe(), // 自分だけ
+	showSameWorkplace: self.isEmployeeOfWorkplace(), // 同じ職場の社員
+	showSameWorkplaceAndChild: self.isEmployeeWorkplaceFollow(), // 同じ職場とその配下の社員
+	
+	/** Advanced search properties */
+	showEmployment: self.showEmployment(), // 雇用条件
+	showWorkplace: self.showWorkplace(), // 職場条件
+	showClassification: self.showClassification(), // 分類条件
+	showJobTitle: self.showJobTitle(), // 職位条件
+	showWorktype: self.showWorktype(), // 勤種条件
+	isMutipleCheck: self.isMutipleCheck(), // 選択モード
+	
+	/** Return data */
+	returnDataFromCcg001: function(data: Ccg001ReturnedData) {
+	    self.selectedEmployee(data.listEmployee);
+	}
 }
+
 // Start component
-$('#ccgcomponent').ntsGroupComponent(self.ccgcomponent);]]>
+$('#com-ccg001').ntsGroupComponent(self.ccg001ComponentOption);]]>
 								</pre>
 							</div>
 							<div id="tabs-viewmodel" class="cf">
