[CCG001] fix text resource

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -197,7 +197,7 @@
 									<div tabindex="18" class="accordion" id="EmploymentList"
 										data-bind="ntsAccordion: {enable: true}">
 										<h3>
-											<label>#{i18n.getText('CCG001_5', ["Com_Employment"])}</label>
+											<label>#{i18n.getText('Com_Employment')}</label>
 										</h3>
 										<div class="contentkcp">
 											<div id="employmentList" tabindex="18" style="width: 352px"></div>
@@ -208,7 +208,7 @@
 									<div tabindex="21" class="accordion" id="WorkplaceList"
 										data-bind="ntsAccordion: {enable: true}">
 										<h3>
-											<label>#{i18n.getText('CCG001_8', ["Com_Workplace"])}</label>
+											<label>#{i18n.getText('Com_Workplace')}</label>
 										</h3>
 										<div class="contentkcpWorkplace">
 											<div tabindex="22" id="workplaceList"></div>
@@ -231,7 +231,7 @@
 									<div tabindex="19" class="accordion" id="ClassificationList"
 										data-bind="ntsAccordion: {enable: true}">
 										<h3>
-											<label>#{i18n.getText('CCG001_6', ["Com_Class"])}</label>
+											<label>#{i18n.getText('Com_Class')}</label>
 										</h3>
 										<div class="contentkcp">
 											<div tabindex="19" id="classificationList"></div>
@@ -242,7 +242,7 @@
 									<div tabindex="20" class="accordion" id="JoptitleList"
 										data-bind="ntsAccordion: {enable: true}">
 										<h3>
-											<label>#{i18n.getText('CCG001_7',["Com_Jobtitle"])}</label>
+											<label>#{i18n.getText('Com_Jobtitle')}</label>
 										</h3>
 										<div class="contentkcp">
 											<div tabindex="20" id="jobtitleList"></div>
