--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/d/index.xhtml
@@ -38,7 +38,7 @@
 							<span class="label" data-bind="text: dispConditionSettingCode"></span>
 							<span class="label" data-bind="text: dispConditionSettingName"></span>
 							<span class="label">#{i18n.getText('CMF001_135')}</span>
-							<span class="label">item transport</span>
+							<span class="label" data-bind="text: $parent.systemType.name"></span>
 						</div>
 						<div class="valign-center control-group">
 							<div data-bind="ntsFormLabel: { }">#{i18n.getText('CMF001_136')}</div>
