--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/l/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/l/index.xhtml
@@ -9,8 +9,8 @@
 		<ui:define name="htmlHead">
 			<script type='text/javascript'>
 				var dialogSize = {
-					width : 1275,
-					height : 748
+					width : 520,
+					height : 500
 				};
 			</script>
 			<com:scriptfile set="IGNITE" />
@@ -49,6 +49,7 @@
 									value: selectedCode,
 									optionsText: 'name',
 									options: itemList,
+									enable: screenMode == 0,
 									columns: [
 										{ prop: 'code', length: 2 },
 										{ prop: 'name', length: 10 },
@@ -64,7 +65,11 @@
 								</div>
 							</td>
 							<td>
-								<input data-bind="ntsTextEditor: {value: simpleValue1}"/>
+								<input data-bind="ntsTextEditor: {value: simpleValue1, enable: screenMode == 0}, visible: selectedDataType == 0"/>
+								<input data-bind="ntsTextEditor: {value: simpleValue1, enable: screenMode == 0}, visible: selectedDataType == 1"/>
+								<input data-bind="ntsTextEditor: {value: simpleValue1, enable: screenMode == 0}, visible: selectedDataType == 2"/>
+								<input data-bind="ntsTextEditor: {value: simpleValue1, enable: screenMode == 0}, visible: selectedDataType == 3"/>
+								<input data-bind="ntsTextEditor: {value: simpleValue1, enable: screenMode == 0}, visible: selectedDataType == 4"/>
 							</td>
 							
 							
@@ -77,7 +82,11 @@
 								</div>
 							</td>
 							<td>
-								<input data-bind="ntsTextEditor: {value: simpleValue2}" />
+								<input data-bind="ntsTextEditor: {value: simpleValue2, enable: screenMode == 0}, visible: selectedDataType == 0" />
+								<input data-bind="ntsTextEditor: {value: simpleValue2, enable: screenMode == 0}, visible: selectedDataType == 1" />
+								<input data-bind="ntsTextEditor: {value: simpleValue2, enable: screenMode == 0}, visible: selectedDataType == 2" />
+								<input data-bind="ntsTextEditor: {value: simpleValue2, enable: screenMode == 0}, visible: selectedDataType == 3" />
+								<input data-bind="ntsTextEditor: {value: simpleValue2, enable: screenMode == 0}, visible: selectedDataType == 4" />
 							</td>
 						</tr>
 					</table>
