KSM011 - A, B: Fix bug UI

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/b/index.xhtml
@@ -53,7 +53,7 @@
 	
 	<div class="block-2">
 		<label class="basic-label">#{i18n.getText('KSM011_62')}</label>
-		<button tabindex="7" data-bind="ntsHelpButton: { image: '../images/KSM011_1.png', position: 'right+450 top', enable: true }">?</button>
+		<button tabindex="7" data-bind="ntsHelpButton: { image: '../images/KSM011_1.png', position: 'right top', enable: true }">?</button>
 		<hr />
 		<table class="symbol-control">
 			<tr>
@@ -81,7 +81,7 @@
 	
 	<div class="block-3">
 		<label class="basic-label">#{i18n.getText('KSM011_65')}</label>
-		<button tabindex="10" data-bind="ntsHelpButton: { image: '../images/KSM011_2.png', position: 'right+450 top', enable: true }">?</button>
+		<button tabindex="10" data-bind="ntsHelpButton: { image: '../images/KSM011_2.png', position: 'right top', enable: true }">?</button>
 		<hr />
 		<table class="basic-items">
 			<tr>
