add option "required" in SwitchButton

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_switchbutton.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_switchbutton.scss
@@ -57,4 +57,10 @@ button.nts-switch-button {
 	  	box-shadow: 0 0 1px 1px $focused_color;
 	  	border-radius: 2px;
 	}
+	
+	&.error {
+		button {
+			border-color: #ff6666;
+		}
+	}
 }
