Update NtsGrid - Fix bug copy paste, delete key and input "-" - Function to rename header text

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/iggridlab/functionext/sample.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/iggridlab/functionext/sample.xhtml
@@ -30,6 +30,9 @@
 					.nts-grid-wrapper table tr td.text-color1 {
 						color: red;
 					}
+					.center-align {
+						text-align: center !important;
+					}
 				</style>
 			</ui:define>
 			
