--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/b/index.xhtml
@@ -7,6 +7,7 @@
 <body>
 	<ui:composition template="../../../../master/dialog.xhtml">
 		<ui:define name="htmlHead">
+			<script>var dialogSize = { width: 850, height: 650 };</script>
 			<com:stylefile path="ccg015.b.style.css" />
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="ccg015.b.start.js" />
