--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/015/c/index.xhtml
@@ -11,6 +11,7 @@
 				nts.uk.ctx.sys.portal.dom.toppage.TopPageCode
 				nts.uk.ctx.sys.portal.dom.toppage.TopPageName
   			</com:ValidatorScript>
+  			<script>var dialogSize = { width: 800, height: 320 };</script>
 			<com:stylefile path="ccg015.c.style.css" />
 			<com:scriptfile set="IGNITE" />
 			<com:scriptfile path="../a/ccg015.a.service.js" />
